# pyopensim

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: cpp.yml  pip.yml  wheels.yml
examples/: build_simple_arm_model.py
scripts/: setup_opensim_linux.sh
scripts/ci/: build_opensim.ps1  build_opensim.sh  repair_wheel.ps1
scripts/opensim/: setup_opensim_linux.sh  setup_opensim_macos.sh  setup_opensim_windows.ps1
scripts/opensim/common/: build_dependencies.sh  build_opensim.sh  install_swig.sh  packages.yaml  parse_preset.py
scripts/python/: generate_stubs.py
src/pyopensim/: __init__.py  __init__.pyi  actuators.pyi  common.pyi  simbody.pyi  simulation.pyi
src/pyosim/: __init__.py  actuators.pyi
src/pyosim/swig/: pyosim_actuators.i  pyosim_analyses.i  pyosim_common.i  pyosim_simbody.i  pyosim_simulation.i  pyosim_tools.i
tests/: test_basic.py
